terraform-project/terraform.tf
# resource "aws_instance" "terraform-ec2" {
#   instance_type = "t3.micro"
#   ami           = "ami-02b64aa047cb5edf5"
#   tags = {
#     Name = "terraform"
#   }

# }

# terraform import aws_instance.terraform-ec2 id
